tests/ui/from_iterator/from_iterator_attr_enum.stderr
error: expected `struct`
 --> tests/ui/from_iterator/from_iterator_attr_enum.rs:4:1
  |
4 | enum Enum {
  | ^^^^
