tests/ui/from_iterator/from_iterator_attr_enum.rs
use derive_more_more::FromIterator;

#[derive(FromIterator)]
enum Enum {
    Rar,
}

fn main() {}
